# cherrypick

./: .gitignore  README.md  io.github.ellie_commons.cherrypick.flathub.yml  io.github.ellie_commons.cherrypick.yml  io.github.elly_code.cherrypick.flathub.yml  io.github.elly_codes.cherrypick.flathub.yml  io.github.elly_codes.cherrypick.yml  meson.build
.github/workflows/: CI.yml
data/: Application.css  cherrypick.desktop.in  cherrypick.gresource.xml  cherrypick.gschema.xml  cherrypick.metainfo.xml.in  meson.build  picker.desktop.in  picker.metainfo.xml.in
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  io.github.ellie_commons.cherrypick.pot  io.github.elly_codes.cherrypick.pot  it.po  ru.po
po/extra/: POTFILES  de.po  es.po  extra.pot  fr.po  it.po  ru.po
src/: Application.vala  meson.build
src/Controllers/: ColorController.vala
src/Models/: Color.vala  ColorHistory.vala  Format.vala
src/Services/: ColorPicker.vala  Settings.vala
src/Views/: MainView.vala
src/Widgets/: ColorButton.vala  ColorPicker.vala  ColorPreview.vala  FormatArea.vala  HistoryButtons.vala  HistoryHeader.vala  Window.vala
src/Windows/: Window.vala
